--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     />
     <title>Love Calculator - Justin</title>
   </head>
-  <body class="container">
-    <header id="main">
+  <body>
+    <header id="main" class="container">
       <div>
         <h1><span>Love</span> Calculator</h1>
         <button id="run" onclick="runCalculation()">Calculate Now</button>
