--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Outfit&family=Righteous&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/x-icon" href="/Images/Logo.svg" />
     <title>Love Calculator - Justin</title>
   </head>
   <body>
